# mba

./: Cargo.toml  index.html  readme.md  rustfmt.toml
.github/workflows/: ci.yml  deploy.yml
assets/: abap-BdImnpbu.js  actionscript-3-CfeIJUat.js  ada-bCR0ucgS.js  andromeeda-C3khCPGq.js  angular-html-Bbf3ZyxA.js  angular-ts-C26w9mnW.js  apache-Pmp26Uib.js  apex-QX45V2Sx.js  apl-e980N3t4.js  applescript-Co6uUVPk.js  ara-BRHolxvo.js  asciidoc-CdggvHu8.js  asm-D_Q5rh1f.js  astro-DAp1zUbp.js  aurora-x-D-2ljcwZ.js  awk-DMzUqQB5.js  ayu-dark-Cv9koXgw.js  ballerina-BFfxhgS-.js  bat-BkioyH1T.js  beancount-BoKiGodi.js  berry-D08WgyRC.js  bibtex-CHM0blh-.js  bicep-6nHXG8SA.js  blade-DGJDb2eD.js  bsl-BO_Y6i37.js  c-BIGW1oBm.js  cadence-D2CYqzqI.js  cairo-KRGpt6FW.js  catppuccin-frappe-Btyk0a-E.js  catppuccin-latte-q-j0iyEw.js  catppuccin-macchiato-brDaU2vB.js  catppuccin-mocha-BR7mELCv.js  clarity-CHh-QcGE.js  clojure-P80f7IUj.js  cmake-D1j8_8rp.js  cobol-CCPHrsME.js  codeowners-Bp6g37R7.js  codeql-DsOJ9woJ.js  coffee-JUOWOZUj.js  common-lisp-Cg-RD9OK.js  (+256 more)
docs/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/mba/: all.html  index.html  macro.choose_binary_ring!.html  macro.choose_binary_ring.html  sidebar-items.js  struct.Symbol.html
docs/num_bigint/: all.html  enum.Sign.html  index.html  sidebar-items.js  struct.BigInt.html  struct.BigUint.html  struct.ParseBigIntError.html  struct.RandomBits.html  struct.TryFromBigIntError.html  struct.U32Digits.html  struct.U64Digits.html  struct.UniformBigInt.html  struct.UniformBigUint.html  (+3 more)
examples/: deobfuscate_linear.rs  invert_perm_poly.rs  linear_congruences.rs  linear_rewrite.rs  obfuscate.rs  perm_poly.rs  quadratic_mba.rs
mba/: Cargo.toml
mba-wasm/: Cargo.toml
mba-wasm/src/: deobfuscate.rs  deobfuscate_linear.rs  lib.rs  linear_checker.rs  linear_system.rs  obfuscate.rs  obfuscate_linear.rs  perm_poly.rs
mba/examples/: bench_solver.rs  deobfuscate_linear.rs  invert_perm_poly.rs  linear_congruences.rs  linear_rewrite.rs  obfuscate.rs  perm_poly.rs  quadratic_mba.rs
mba/src/: bitwise_expr.rs  expr.rs  formatter.rs  lattice.rs  lib.rs  matrix.rs  perm_poly.rs  poly.rs  simplify_boolean.rs  solver.rs  tex.rs  valuation.rs  vector.rs
mba/src/linear_mba/: deobfuscate.rs  is_linear.rs  mod.rs  obfuscate.rs  rewrite.rs  subexpression.rs
mba/src/rings/: binary_bigint.rs  float.rs  integers.rs  mod.rs  mod_inv_pow_two.rs  mod_n.rs  primitive_int.rs  primitive_uint.rs  rationals.rs  traits.rs  var_bits_primitive.rs
src/: diophantine.rs  expr.rs  lattice.rs  lib.rs  linear_mba.rs  main.rs  matrix.rs  perm_poly.rs  poly.rs  simplify_boolean.rs  uniform_expr.rs  valuation.rs  vector.rs
web/: eslint.config.js  index.html  package.json  vite.config.ts
(+361 files in other folders)
