[package]
name = "mba"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4"
itertools = "0.12"
rand = "0.8"
num-traits = "0.2"
num-integer = "0.1"
num-bigint = { version = "0.4", features = ["rand"] }
num-rational = "0.4"
egg = "0.9"
z3 = { version = "0.12", optional = true }
z3-sys = { version = "0.8", optional = true }

[features]
z3 = ["dep:z3", "dep:z3-sys"]
wasm = ["egg/wasm-bindgen"]