[workspace]
resolver = "3"
members = ["mba", "mba-wasm"]

[patch.crates-io]
# Use this `num-bigint` with rand 0.9 that I forked from a pull request and
# changed the version back from 0.5.0-pre. This can be removed if it is ever merged.
num-bigint = { git = "https://github.com/plzin/num-bigint.git", branch = "rand-0.9" }

[workspace.dependencies]
mba = { path = "mba" }
rand = "0.9"
itertools = "0.14"
num-traits = "0.2"
num-integer = "0.1"
num-bigint = { version = "0.4", features = ["rand"] }
num-rational = "0.4"
egg = "0.10"
z3 = "0.12"
z3-sys = "0.8"
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = "0.3"
getrandom = { version = "0.3.3" }
console_error_panic_hook = "0.1"